[DT-2036] Refactor queries for RADAR (#2623)
Co-authored-by: rushtong <grushton@broadinstitute.org>
Co-authored-by: Gregory Rushton <rushtong@users.noreply.github.com>
Co-authored-by: Rachel Johanek <55256690+rjohanek@users.noreply.github.com>
Co-authored-by: rjohanek <rjohanek@broadinstitute.org>
Co-authored-by: Matt Bemis <MatthewBemis@users.noreply.github.com>