@@ -4,7 +4,6 @@ import com.google.inject.Inject;
 import java.util.Date;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import org.broadinstitute.consent.http.db.VoteDAO;
 import org.broadinstitute.consent.http.enumeration.ElectionStatus;
 import org.broadinstitute.consent.http.enumeration.VoteType;
@@ -69,6 +68,6 @@ public class VoteServiceDAO {
               });
           h.commit();
         });
-    return voteDAO.findVotesByIds(votes.stream().map(Vote::getVoteId).collect(Collectors.toList()));
+    return voteDAO.findVotesByIds(votes.stream().map(Vote::getVoteId).toList());
   }
 }
